# ai_powered_api_tester

./: .gitignore  README.md  advance_web.docx  langgraph_report_en.md
apiflow_langgraph/: .env.example  Procfile  langgraph_checkpoints.db-shm  langgraph_checkpoints.db-wal  pyproject.toml  requirements.txt
apiflow_langgraph/src/apiflow_langgraph/: graph.py  http_executor.py  nodes.py  server.py  state.py  template_resolver.py
backend/: package-lock.json  package.json
backend/src/: index.js
backend/src/controllers/: auth.controller.js  collection.controller.js  execution.controller.js  request.controller.js  scenario.controller.js
backend/src/database/: db.js
backend/src/middleware/: auth.middleware.js
backend/src/models/: collection.model.js  execution-history.model.js  request.model.js  scenario.model.js  user.model.js
backend/src/routes/: auth.routes.js  collection.routes.js  execution.routes.js  internal.routes.js  request.routes.js  scenario.routes.js
backend/src/services/: collection.service.js  execution.service.js  langgraph-agent.service.js  (+5 more)
crewai-service/: .env.example  Procfile  crewai_output.txt  pyproject.toml  requirements.txt
crewai-service/src/apiflow_crew/: crew.py  main.py  server.py
crewai-service/src/apiflow_crew/config/: agents.yaml  tasks.yaml
crewai-service/src/apiflow_crew/models/: schemas.py
crewai-service/src/apiflow_crew/tools/: endpoint_tools.py
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
notes/: apiflow_langgraph_plan.md  result.md  work.txt
(+70 files in other folders)
